# QLang

./: .gitignore  CMakeLists.txt  README.md  gen_deep_nesting.py  init.sh
runtime/: CMakeLists.txt  README.md  qlang_runtime.c  qlang_runtime.cpp
src/: AST.cpp  AST.h  CMakeLists.txt  Checker.cpp  Checker.h  CodeGen.cpp  CodeGen.h  Diagnostics.cpp  Diagnostics.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  Token.cpp  Token.h
src/Driver/: main.cpp
test/: CMakeLists.txt  README.md
test/e2e/: CMakeLists.txt  run_e2e_test.sh  test_array.ql  test_array_bounds.ql  test_array_compare.ql  test_array_size_limit.ql  test_break_outside.ql  test_codegen_basic.ql  test_codegen_call.ql  test_codegen_control.ql  test_codegen_expr.ql  test_codegen_for.ql  test_codegen_if.ql  test_codegen_return.ql  test_codegen_switch.ql  test_codegen_while.ql  test_comprehensive.ql  test_continue_in_switch_loop.ql  test_continue_outside.ql  test_div_zero_literal.ql  test_divzero.ql  test_fibonacci.ql  test_float_arith.ql  test_global.ql  test_global_order.ql  test_lexer.ql  test_literal_logical.ql  test_matrix_add.ql  test_matrix_func.ql  test_matrix_index.ql  test_matrix_index_bounds.ql  test_matrix_lexer.ql  test_matrix_mul.ql  test_matrix_neg.ql  test_matrix_print.ql  test_matrix_scalar.ql  test_matrix_semantic_err.ql  test_matrix_semantic_valid.ql  test_matrix_sub.ql  test_matrix_type.ql  (+23 more)
test/e2e/expected/: test_codegen_control.expected  test_comprehensive.expected  test_float_arith.expected  test_matrix_sub.expected  test_string_matrix_interaction.expected  test_struct_switch.expected
test/unit/: CMakeLists.txt  test_checker.cpp  test_lexer.cpp  test_lexer_errors.cpp  test_matrix_lexer.cpp  test_matrix_parser.cpp  test_matrix_semantic.cpp  test_parser.cpp
